--- a/frappe/translations/az.csv
+++ b/frappe/translations/az.csv
@@ -1,68 +1,119 @@
-Item,Məhsul,
-Item 1,Məhsul 1,
-Item 2,Məhsul 2,
-Item 3,Məhsul 3,
-Item 4,Məhsul 4,
-Item 5,Məhsul 5,
-Item Alternative,Alternativ məhsul,
-Item Attribute,Məhsul Atributu,
-Item Attribute Value,Məhsul Atribut dəyəri,
-Item Attribute Values,Məhsul Atribut dəyərləri,
-Item Balance (Simple),Məhsul Qalıqı (Sadə),
-Item Barcode,Məhsulun Barkodu,
-Item Classification,Item Classification,
-Item Code,Məhsul Kodu,
+Item,Material,
+Item 1,Material 1,
+Item 2,Material 2,
+Item 3,Material 3,
+Item 4,Material 4,
+Item 5,Material 5,
+Item Alternative,Material Alternativ,
+Item Attribute,Material Atributu,
+Item Attribute Value,Material Atribut dəyəri,
+Item Attribute Values,Material Atribut dəyərləri,
+Item Balance (Simple),Material Qalıqı (Sadə),
+Item Barcode,Materialın Barkodu,
+Item Classification,Material təsnifatı,
+Item Code,Material Kodu,
 Item Code (Drug),Məhsul Kodu (Dərman),
-Item Code > Item Group > Brand,Məhsul Kodu > Məhsul Qrupu > Brend,
-Item Code cannot be changed for Serial No.,Item Code cannot be changed for Serial No.,
-Item Code is required,Məhsul Kodu tələb olunur,
-Item Code required at Row No {0},{0} nömrəli sətirdə Məhsulun Kodu tələb olunur,
-"Item Code, warehouse and quantity are required on row {0}","Item Code, warehouse and quantity are required on row {0}",
-Item Code: {0} is not available under warehouse {1}.,Item Code: {0} is not available under warehouse {1}.,
-Item Customer Detail,Item Customer Detail,
-Item Default,Item Default,
-Item Defaults,Item Defaults,
-Item Description,Item Description,
-Item Details,Item Details,
-Item Fields,Item Fields,
-Item Group,Məhsul Qrupu,
-Item Group Defaults,Item Group Defaults,
-Item Group Name,Məhsul Qrup adı,
-Item Group Tree,Item Group Tree,
-Item Group not mentioned in item master for item {0},Item Group not mentioned in item master for item {0},
+Item Code > Item Group > Brand,Materila Kodu > Material Qrupu > Brend,
+Item Code cannot be changed for Serial No.,Seriya nömrəsi üçün material kodu dəyişdirilə bilməz.,
+Item Code is required,Material Kodu tələb olunur,
+Item Code required at Row No {0},{0} nömrəli sətirdə Material Kodu tələb olunur,
+"Item Code, warehouse and quantity are required on row {0}","{0}-nci sətirdə Material Kodu, Anbar və Miqdar tələb olunur",
+Item Code: {0} is not available under warehouse {1}.,Material Kodu: {0} {1} anbarda yoxdur.,
+Item Customer Detail,Material-Müştəri təfərrüatları,
+Item Default,Material ilkin dəyər,
+Item Defaults,Material ilkin dəyərlər,
+Item Description,Material təsviri,
+Item Details,Material təfərrüatları,
+Item Fields,Material Sahələri,
+Item Group,Material Qrupu,
+Item Group Defaults,Material Qrup ilkin dəyərləri,
+Item Group Name,Material Qrup adı,
+Item Group Tree,Material Qrup Ağacı,
+Item Group not mentioned in item master for item {0},{0} material üçün Material Qrupu qeyd olunmayıb,
 Item Groups,Məhsul Qrupları,
-Item Image (if not slideshow),Item Image (if not slideshow),
-Item Label,Məhsul Etiketi,
-Item Locations,Məhsul Yerləri,
-Item Manager,Məhsul Meneceri,
-Item Manufacturer,Məhsul İstehsalçısı,
-Item Name,Məhsul adı,
-Item Naming By,Item Naming By,
-Item Price,Məhsul Qiyməti,
-Item Price Settings,Məhsul Qiymət Parametrləri,
-Item Price Stock,Item Price Stock,
-Item Price added for {0} in Price List {1},Item Price added for {0} in Price List {1},
-"Item Price appears multiple times based on Price List, Supplier/Customer, Currency, Item, Batch, UOM, Qty, and Dates.","Item Price appears multiple times based on Price List, Supplier/Customer, Currency, Item, Batch, UOM, Qty, and Dates.",
-Item Price updated for {0} in Price List {1},Item Price updated for {0} in Price List {1},
-Item Prices,Məhsul Qiymətləri,
-Item Quality Inspection Parameter,Item Quality Inspection Parameter,
+Item Image (if not slideshow),Material Şəkili (slayd şou deyilsə),
+Item Label,Material Etiketi,
+Item Locations,Material Yerləri,
+Item Manager,Material Meneceri,
+Item Manufacturer,Material İstehsalçısı,
+Item Name,Material adı,
+Item Naming By,Materialın adlandırılması,
+Item Price,Material Qiyməti,
+Item Price Settings,Material Qiymət Parametrləri,
+Item Price Stock,Material Qiyməti Stok,
+Item Price added for {0} in Price List {1},{0} Material Qiyməti {1} Qiymət Cədvəlinə əlavə edildi,
+"Item Price appears multiple times based on Price List, Supplier/Customer, Currency, Item, Batch, UOM, Qty, and Dates.","Material qiyməti Qiymət Cədvəli, Təchizatçı/Müştəri, Valyuta, Material, Partiya, UOM, Miqdar və Tarixlərə əsasən dəfələrlə görünür.",
+Item Price updated for {0} in Price List {1},{0} Material Qiyməti {1} Qiymət Cədvəlində yeniləndi,
+Item Prices,Material Qiymətləri,
+Item Quality Inspection Parameter,Material Keyfiyyət Yoxlama parametri,
 Item Reference,Item Reference,
-Item Reorder,Item Reorder,
-Item Reported,Item Reported,
+Item Reorder,Material yenidən sıtalanması,
+Item Reported,Material məlumat verildi,
 Item Row {0}: {1} {2} does not exist in above '{1}' table,Item Row {0}: {1} {2} does not exist in above '{1}' table,
-Item Serial No,Item Serial No,
-Item Shortage Report,Item Shortage Report,
-Item Supplier,Məhsul Təchizatçısı,
-Item Tax,Məhsul Vergisi,
-Item Tax Amount Included in Value,Item Tax Amount Included in Value,
-Item Tax Rate,Məhsul Vergi dərəcəsi,
+Item Serial No,Material Seriya Nömrəsi,
+Item Shortage Report,Material Çatışmazlığı Hesabatı,
+Item Supplier,Material Təchizatçısı,
+Item Tax,Material Vergisi,
+Item Tax Amount Included in Value,Vergi məbləği dəyərə daxildir,
+Item Tax Rate,Material Vergi dərəcəsi,
 Item Tax Row {0} must have account of type Tax or Income or Expense or Chargeable,Item Tax Row {0} must have account of type Tax or Income or Expense or Chargeable,
-Item Tax Template,Item Tax Template,
-Item Tax Template Detail,Item Tax Template Detail,
-Item Template,Item Template,
-Item To Manufacture,Item To Manufacture,
-Item Type,Məhsul növü,
-Item UOM,Məhsul UOM,
+Item Tax Template,Material Vergi Şablonu,
+Item Tax Template Detail,Material Vergi Şablonu təfərrüatı,
+Item Template,Material Şablonu,
+Item To Manufacture,İstehsal üçün Material,
+Item Type,Material növü,
+Item UOM,Material UOM,
 Item Unavailable,Item Unavailable,
-Item Variant,Item Variant,
-Item name,Məhsul adı,
+Item Variant,Material Variantı,
+Item name,Material adı,
+"Company History","Şirkət Tarixçəsi",
+"Customer Provided Item" cannot be Purchase Item also,"Customer Provided Item" cannot be Purchase Item also,
+"Customer Provided Item" cannot have Valuation Rate,"Customer Provided Item" cannot have Valuation Rate,
+"From Date" can not be greater than or equal to "To Date","Tarixdən" "Tarixə"dən böyük və ya bərabər ola bilməz,
+""Is Fixed Asset" cannot be unchecked, as Asset record exists against the item",""Is Fixed Asset" cannot be unchecked, as Asset record exists against the item",
+"Parent" signifies the parent table in which this row must be added,"Parent" signifies the parent table in which this row must be added,
+"Team Members" or "Management","Komanda üzvləri" və ya "İdarəetmə",
+"amended_from" field must be present to do an amendment.,Düzəliş etmək üçün "adended_from" sahəsi mövcud olmalıdır.,
+"{0}" is not a valid Google Sheets URL,"{0}" is not a valid Google Sheets URL,
+%  Delivered,%  Çatdırılmış,
+% Amount Billed,% məbləğ faturalanıb,
+% Billed,% faturalanıb,
+% Complete,% tamamlandı,
+% Complete Method,% metod tamamlandı,
+% Completed,% tamamlandı,
+% Finished Item Quantity,% bitmiş məhsulun miqdarı,
+% Installed,% Quraşdırılıb,
+% Occupied,% işğal olunub,
+% Of Applicant Portfolio,% Of Applicant Portfolio,
+% Of Grand Total,% Ümumi Cəmi,
+% Of Total Portfolio,% Of Total Portfolio,
+% Ordered,% Ordered,
+% Progress,% Progress,
+% Received,% Received,
+% Returned,% Returned,
+% Utilization (B + NB) / T,% Utilization (B + NB) / T,
+% Utilization (B / T),% Utilization (B / T),
+% of materials billed against this Sales Order,% material bu Satış Sifarişdən faturalanıb, 
+% of materials delivered against this Delivery Note,% material bu Çatdırılma Qaiməsidən çatdırılıb,
+% of materials delivered against this Sales Order,% material bu Satış Sifarişdən çatdırılıb,
+&lt;head&gt; HTML,&lt;head&gt; HTML,
+'Account' in the Accounting section of Customer {0},{0} Müştərinin Mühasibat bölməsində 'Hesab',
+'Based On' and 'Group By' can not be same,'Based On' and 'Group By' can not be same,
+'Date' is required,'Tarix' tələb olunur,
+'Days Since Last Order' must be greater than or equal to zero,"Son Sifarişdən Sonrakı Günlər" sıfırdan böyük və ya ona bərabər olmalıdır,
+'Default {0} Account' in Company {1},{1} şirkətində '{0} Hesab İlkin dəyər',
+'Entries' cannot be empty,'Girişlər' boş ola bilməz,
+'From Date' is required,'Tarixdən' tələb olunur,
+'From Date' must be after 'To Date','Tarixdən' 'Tarixə'dən sonra olmalıdır,
+'Has Serial No' can not be 'Yes' for non-stock item,'Has Serial No' can not be 'Yes' for non-stock item,
+'In Global Search' not allowed for type {0} in row {1},'In Global Search' not allowed for type {0} in row {1},
+'In List View' not allowed for type {0} in row {1},'In List View' not allowed for type {0} in row {1},
+'Opening','Opening',
+'Recipients' not specified,'Alıcılar' göstərilməyib,
+'To Case No.' cannot be less than 'From Case No.','To Case No.' cannot be less than 'From Case No.',
+'To Date' is required,'Tarixə' tələb olunur,
+'Update Stock' can not be checked because items are not delivered via {0},'Update Stock' can not be checked because items are not delivered via {0},
+'Update Stock' cannot be checked for fixed asset sale,'Update Stock' cannot be checked for fixed asset sale,
+'employee_field_value' and 'timestamp' are required.,'employee_field_value' and 'timestamp' are required.,
+'{0}' is not a valid URL,'{0}' etibarlı URL deyil,
+'{0}' not allowed for type {1} in row {2},'{0}' not allowed for type {1} in row {2},
