--- a/frappe/translations/az.csv
+++ b/frappe/translations/az.csv
@@ -70,7 +70,7 @@ Item name,Material adı,
 "Customer Provided Item" cannot be Purchase Item also,"Customer Provided Item" cannot be Purchase Item also,
 "Customer Provided Item" cannot have Valuation Rate,"Customer Provided Item" cannot have Valuation Rate,
 "From Date" can not be greater than or equal to "To Date","Tarixdən" "Tarixə"dən böyük və ya bərabər ola bilməz,
-""Is Fixed Asset" cannot be unchecked, as Asset record exists against the item",""Is Fixed Asset" cannot be unchecked, as Asset record exists against the item",
+"""Is Fixed Asset"" cannot be unchecked, as Asset record exists against the item","""Is Fixed Asset"" cannot be unchecked, as Asset record exists against the item",
 "Parent" signifies the parent table in which this row must be added,"Parent" signifies the parent table in which this row must be added,
 "Team Members" or "Management","Komanda üzvləri" və ya "İdarəetmə",
 "amended_from" field must be present to do an amendment.,Düzəliş etmək üçün "adended_from" sahəsi mövcud olmalıdır.,
