az country currency, lang az

--- a/frappe/translations/az.csv
+++ b/frappe/translations/az.csv
@@ -117,3 +117,110 @@ Item name,Material adı,
 'employee_field_value' and 'timestamp' are required.,'employee_field_value' and 'timestamp' are required.,
 '{0}' is not a valid URL,'{0}' etibarlı URL deyil,
 '{0}' not allowed for type {1} in row {2},'{0}' not allowed for type {1} in row {2},
+(Ca+Mg)/K,(Ca+Mg)/K,
+(Forecast),(Forecast),
+(Half Day),(Half Day),
+(Hour Rate / 60) * Actual Operation Time,(Hour Rate / 60) * Actual Operation Time,
+(Mandatory),(Məcburi),
+(Serial No: {0}) cannot be consumed as it's reserverd to fullfill Sales Order {1}.,(Serial No: {0}) cannot be consumed as it's reserverd to fullfill Sales Order {1}.,
+(including),(including),
+) for {0},) for {0},
+* Will be calculated in the transaction.,* Əməliyyatda hesablanacaq.,
+** Failed: {0} to {1}: {2},** Failed: {0} to {1}: {2},
+**Currency** Master,**Currency** Master,
+**Fiscal Year** represents a Financial Year. All accounting entries and other major transactions are tracked against **Fiscal Year**.,**Fiscal Year** represents a Financial Year. All accounting entries and other major transactions are tracked against **Fiscal Year**.,
+**Monthly Distribution** helps you distribute the Budget/Target across months if you have seasonality in your business.,**Monthly Distribution** helps you distribute the Budget/Target across months if you have seasonality in your business.,
+...Adding Article to Topics,...Adding Article to Topics,
+...Adding Course to Programs,...Adding Course to Programs,
+...Adding Quiz to Topics,...Adding Quiz to Topics,
+...Adding Topic to Courses,...Adding Topic to Courses,
+0 - Draft; 1 - Submitted; 2 - Cancelled,0 - Qaralama; 1 - Təstiq edildi; 2 - Ləğv edildi,
+0 is highest,0 ən yüksəkdir,
+1 Currency = [?] Fraction|||For e.g. 1 USD = 100 Cent,1 Currency = [?] Fraction|||For e.g. 1 USD = 100 Cent,
+1 Google Calendar Event synced.,1 Google Calendar Event sinxronlaşdırıldı.,
+1 Loyalty Points = How much base currency?,1 Loyalty Points = How much base currency?,
+1 Report,1 Hesabat,
+1 comment,1 şərh,
+1 hour ago,1 saat əvvəl,
+1 hr,1 saat,
+1 minute ago,1 dəqiqə əvvəl,
+1 month ago,1 ay əvvəl,
+1 record will be exported,1 qeyd ixrac ediləcək,
+1 week ago,1 həftə əvvəl,
+1 year ago,1 il əvvəl,
+194A,194A,
+194C,194C,
+194D,194D,
+194H,194H,
+194I,194I,
+194J,194I,
+194LA,194LA,
+194LBB,194LBB,
+194LBC,194LBC,
+2 Yearly,2 İllik,
+30 mins,30 dəq.,
+5 Records,5 Qeydlər,
+6 hrs,6 saat,
+80G Number,80G Number,
+80G With Effect From,80G With Effect From,
+90 Above,90 Above,
+; not allowed in condition,; şərtdə icazə verilmir,
+Abbr,Abbr,
+Abbr can not be blank or space,Abreviatura boş və ya boşluq ola bilməz,
+Abbreviation,Abreviatura,
+Abbreviation Rename Error,Abreviatura Ad dəyişdirmə xətası,
+Abbreviation already used for another company,Bu Abreviatura artıq başqa bir şirkət üçün istifadə olunur,
+Abbreviation cannot have more than 5 characters,Abreviatura 5 simvoldan çox ola bilməz,
+Abbreviation is mandatory,Abreviatura məcburidir,
+Abdomen,Abdomen,
+About,Haqqında,
+About Us,Haqqımızda,
+About Us Settings,Haqqımızda Parametrlər,
+About Us Team Member,Haqqımızda Komanda Üzvü,
+About the Company,Şirkət haqqında,
+About your company,Şirkətiniz haqqında,
+About {0} minute remaining,Təxminən {0} dəqiqə qalıb,
+About {0} minutes remaining,Təxminən {0} dəqiqə qalıb,
+About {0} seconds remaining,Təxminən {0} saniyə qalıb,
+Accept Payment,Ödənişi Qəbul edin,
+Acceptance Criteria Formula,Qəbul Meyarları Formulu,
+Acceptance Criteria Value,Qəbul Meyarları Dəyəri,
+Accepted,Qəbul edildi,
+Accepted + Rejected Qty must be equal to Received quantity for Item {0},{0} Material üçün Qəbul Edilən + Rədd Edilən miqdar Alınan miqdara bərabər olmalıdır,
+Accepted Qty,Qəbul Edilən miqdar,
+Accepted Qty in Stock UOM,Stok Vahidin-də Qəbul Edilən miqdar,
+Accepted Quantity,Qəbul Edilən miqdar,
+Accepted Warehouse,Qəbul Edilən Anbar,
+Accessable Value,Accessable Value,
+Account,Hesab,
+Account Balance,Hesab balansı,
+Account Balance Processing Error,Hesab balansının işlənməsi xətası,
+Account Currency,Hesab valyutası,
+Account Details,Hesab Təfərrüatları,
+Account Head,Account Head,
+Account Info,Hesab Məlumatı,
+Account Manager,Mühasib,
+Account Missing,Hesab yoxdur,
+Account Name,Hesab adı,
+Account No,Hesab No,
+Account Not Found,Hesab tapılmadı,
+Account Number,Hesab nömrəsi, 
+Account Number Length,Hesab nömrəsinin uzunluğu,
+Account Number {0} already used in account {1},{0} Hesab nömrəsi artıq {1} Hesabda istifadə olunur, 
+Account Opening Balance,Account Opening Balance,
+Account Paid From,Hesabdan Ödəniş,
+Account Paid To,Hesaba Ödəniş,
+Account Pay Only,Yalnız Ödəniş Hesabı,
+Account SID,Account SID,
+Account Subtype,Account Subtype,
+Account Type,Hesab Növü,
+Account Type for {0} must be {1},{0} Hesab Növü {1} olmalıdır,
+Account Value,Hesab Dəyəri,
+"Account balance already in Credit, you are not allowed to set 'Balance Must Be' as 'Debit'","Bu Hesab Kreditdir, 'Balans Debit Olmalıdır' seçimi seçilə bilməz",
+"Account balance already in Debit, you are not allowed to set 'Balance Must Be' as 'Credit'","Bu Hesab Debitdir, 'Balans Kredit Olmalıdır' seçimi seçilə bilməz",
+Account for Change Amount,Account for Change Amount,
+Account for accepting donation payments,İanə ödənişlərini qəbul etmək üçün Hesab,
+Account for accepting membership payments,Üzvlük ödənişlərini qəbul etmək üçün Hesab,
+Account is mandatory to get payment entries,Ödəniş girişlərini əlavə etmək üçün Hesab bəlirləmənir məcburidir,
+Account is not set for the dashboard chart {0},{0} dashboard qrafiki üçün Hesab təyin edilməyib,
+Account number for account {0} is not available.<br> Please setup your Chart of Accounts correctly.,{0} Hesabı üçün hesab nömrəsi mövcud deyil.<br> Lütfən, Hesablar Planınızı düzgün quraşdırın.,
